# onco-miner

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  complexity_reduction.py  config.yml  data_transformation.py  data_validation.py  docker-compose.yml  input_model.py  metrics_retrieval.py  performance_testing.py  process_model_retrieval.py  pyproject.toml  requirements.txt  response_model.py  stats_retrieval.py  test_app.py  test_discover.py  test_main.http
.github/workflows/: cd.yml  ci.yml
data_handling/: complexity_reduction.py  data_transformation.py  data_validation.py
helpers/: config_loader.py
model/: input_model.py  response_model.py
retrieval/: metrics_retrieval.py  process_model_retrieval.py
test_logs/: sepsis.json
tests/integration/: conftest.py  test_app.py  test_input_model.py  test_metrics_retrieval.py  test_process_model_retrieval.py  test_response_model.py
tests/test_logs/: sepsis.json  sorted_sepsis.json
tests/unit/: test_complexity_reduction.py  test_data_transformation.py  test_data_validation.py
