[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onco-miner"
version = "0.0.1"
description = "Backend for process model visualization."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Martin Kuhn", email = "martin.kuhn@dfki.de" }, {name = "Eric Brake", email = "eric.brake@dfki.de"}]
dependencies = [
  "fastapi>=0.111.0",
  "numpy>=1.26.4",
  "pydantic>=2.8.0",
  "pydantic-core>=2.20.0",
  "pandas>=1.5.3",
  "pm4py>=2.5.2",
  "python-dateutil>=2.9.0",
  "pytz>=2024.1",
  "requests>=2.32.0",
  "setuptools~=70.0.0",
  "uvicorn>=0.30.0",
  "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "mypy==1.18.2",
  "pytest>=8.0.0",
  "types-PyYAML>=6.0.12",
  "types-requests>=2.32.0",
  "types-pytz>=2024.1.0",
  "types-python-dateutil>=2.9.0",
]
test = [
  "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/wi2trier/onco-miner"
Repository = "https://github.com/wi2trier/onco-miner"

[tool.setuptools]
py-modules = [
  "app",
  "complexity_reduction",
  "data_transformation",
  "data_validation",
  "input_model",
  "metrics_retrieval",
  "process_model_retrieval",
  "response_model",
]

# ---------- Ruff (linter + formatter) ----------
[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["build"]

[tool.ruff.lint]
select = [
  "E","F","W",   # basic errors / style
  "B","B9",      # bugbear: common footguns
  "C90",         # complexity
  "I",           # import sorting
  "UP",          # modern syntax
  "S",           # basic security checks
]
ignore = [
  "E203",        # harmless; Black-compat; also fine with ruff format
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow `assert` in tests

# ---------- mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
exclude = "^(build/|build\\\\|tests/|tests\\\\|test_.*\\.py$)"

[[tool.mypy.overrides]]
module = [
  "tensorflow",
  "tensorflow.*",
  "tensorflow_privacy",
  "tensorflow_privacy.*",
  "keras",
  "keras.*",
  "pm4py",
  "pm4py.*",
  "sklearn",
  "sklearn.*",
  "pandas",
  "pandas.*",
  "defusedxml",
  "defusedxml.*",
  "scipy",
  "scipy.*",
  "setuptools",
  "setuptools.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "diffprivlib",
  "diffprivlib.*",
  "sdmetrics",
  "sdmetrics.*",
]
ignore_missing_imports = true

# ---------- pytest ----------
[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

# ---------- coverage ----------
